--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
             },
 
             allowTouchMove: false,
+            simulateTouch: false,
             grabCursor: false,
             keyboard: {
                 enabled: true
