--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     </div> -->
                     <div class="contactinfo"><i class="fa-brands fa-linkedin-in"></i>
                         <h3>LinkedIn</h3>
-                        <p><a href="https://www.linkedin.com/in/jeel-rajani" target="_blank">LinkedIn Profile</a></p>
+                        <a href="https://www.linkedin.com/in/jeel-rajani" target="_blank">LinkedIn Profile</a>
                     </div>
                 </div>
                 <form action="https://formspree.io/f/xkogggra" method="POST">
