--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         <h3>Website</h3>
                         <p>https://jeelrajani.github.io/</p>
                     </div> -->
-                    <div class="contactinfo"><i class="fa-brands fa-linkedin-in"></i>
+                    <div class="contactinfo SocialLinks"><i class="fa-brands fa-linkedin-in"></i>
                         <h3>LinkedIn</h3>
                         <a href="https://www.linkedin.com/in/jeel-rajani" target="_blank">LinkedIn Profile</a>
                     </div>
