--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="icon" type="image/png" href="favicon.png">
-    <meta name="description" content="Jeel Rajani – Backend Developer skilled in PHP, MySQL, APIs">
-    <meta property="og:image" content="https://jeelrajani.github.io/bg.jpeg" />
+    <!-- <meta name="description" content="Jeel Rajani – Backend Developer skilled in PHP, MySQL, APIs"> -->
+
+    <meta property="og:title" content="Jeel Rajani | Backend Developer">
+    <meta property="og:description" content="PHP Developer • APIs • MySQL • MVC">
+    <meta property="og:image" content="https://jeelrajani.github.io/bg.jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jeelrajani.github.io">
+
 </head>
 <main>
     <aside>
