--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
     <meta property="og:title" content="Jeel Rajani | Backend Developer">
     <meta property="og:description" content="PHP Developer • APIs • MySQL • MVC">
-    <meta property="og:image" content="https://abcd.github.io/bg-og-v2.jpeg">
+    <meta property="og:image" content="https://jeelrajani.github.io/bg-og-v2.jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://abcd.github.io">
+    <meta property="og:url" content="https://jeelrajani.github.io">
 
 </head>
 <main>
@@ -65,7 +65,7 @@
                         <hr class="hr1">
                         <hr class="hr2">
                     </div>
-                    <img src="bg-og-v2" alt="">
+                    <img src="bg-og-v2.jpeg" alt="">
                     <div class="bottom-left-corner">
                         <hr class="hr1">
                         <hr class="hr2">
