--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="swiper-slide home-slide">
                 <div class="HomeContent">
                     <h1>Hi! I'm <span class="stylized-name">Jeel</span>,</h1>
-                    <h2>A <span class="proffesions">Backend Developer</span></h2>
+                    <h2>A <span class="proffesions"></span></h2>
 
                     <p class="heroline">
                         I build secure, scalable backend systems using PHP,
@@ -65,7 +65,7 @@
                         <hr class="hr1">
                         <hr class="hr2">
                     </div>
-                    <img src="bg-og-v2.jpeg" alt="">
+                    <img src="bg-og-v2.jpeg" alt="Jeel Rajani Backend Developer">
                     <div class="bottom-left-corner">
                         <hr class="hr1">
                         <hr class="hr2">
@@ -433,4 +433,19 @@
             }
         }, { passive: false });
     });
+</script>
+<script>
+    const text = "Backend Developer";
+    const typingElement = document.getElementById("typing-text");
+    let index = 0;
+
+    function typeEffect() {
+        if (index < text.length) {
+            typingElement.textContent += text.charAt(index);
+            index++;
+            setTimeout(typeEffect, 100);
+        }
+    }
+
+    typeEffect();
 </script>
