--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
                     </div>
                 </div>
             </div>
-            <div class="swiper-slide projects">
+
+            <!-- <div class="swiper-slide projects">
                 <h1 class="heading">Projects</h1>
 
                 <div class="projects-wrapper">
 
-                    <!-- Project 1 -->
                     <div class="project-card">
                         <h2>Multi-Vendor & Multi-Language E-Commerce Platform</h2>
                         <p class="tech">
@@ -235,7 +235,6 @@
                         </ul>
                     </div>
 
-                    <!-- Project 2 -->
                     <div class="project-card">
                         <h2>Lender–Consumer Application Platform</h2>
                         <p class="tech">
@@ -251,7 +250,6 @@
                         </ul>
                     </div>
 
-                    <!-- Project 3 -->
                     <div class="project-card">
                         <h2>Dynamic Database Management System</h2>
                         <p class="tech">
@@ -265,7 +263,60 @@
                     </div>
 
                 </div>
+            </div> -->
+
+            <div class="swiper-slide projects">
+                <h1 class="heading">Projects</h1>
+
+                <div class="projects-grid">
+
+                    <!-- Project 1 -->
+                    <div class="project-card">
+                        <img src="images/ecommerce.jpg" alt="E-commerce Platform">
+                        <div class="project-content">
+                            <h2>Multi-Vendor & Multi-Language E-Commerce</h2>
+                            <p class="tech">PHP (MVC), CodeIgniter, MySQL</p>
+                            <ul>
+                                <li>Scalable multi-vendor system</li>
+                                <li>Custom multi-language management</li>
+                                <li>Admin panels for vendors & content</li>
+                                <li>Optimized database performance</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- Project 2 -->
+                    <div class="project-card">
+                        <img src="images/lender-platform.jpg" alt="Lender Consumer Platform">
+                        <div class="project-content">
+                            <h2>Lender–Consumer Application Platform</h2>
+                            <p class="tech">Custom PHP, MySQL, APIs</p>
+                            <ul>
+                                <li>Backend system for lenders & borrowers</li>
+                                <li>Creditsafe & Companies House integration</li>
+                                <li>Cloud document uploads (BOX)</li>
+                                <li>Decision engine & CRM integrations</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- Project 3 -->
+                    <div class="project-card">
+                        <img src="images/database-system.jpg" alt="Dynamic Database System">
+                        <div class="project-content">
+                            <h2>Dynamic Database Management System</h2>
+                            <p class="tech">PHP, MySQL</p>
+                            <ul>
+                                <li>Dynamic schema creation</li>
+                                <li>Secure data handling</li>
+                                <li>Query optimization</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
             </div>
+
             <div class="swiper-slide services">
 
                 <h1 class="heading">Services</h1>
