--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="swiper-slide education">
+            <!-- <div class="swiper-slide education">
                 <h1 class="heading">Education</h1>
                 <div class="education-wrapper">
                     <div class="education-card">
@@ -214,7 +214,58 @@
                         <p class="duration">2019 – 2022</p>
                     </div>
                 </div>
+            </div> -->
+
+            <div class="swiper-slide gallery experience">
+                <h1 class="heading">Work Experience</h1>
+
+                <div class="timeline">
+
+                    <div class="timeline-item animate">
+                        <div class="timeline-dot"></div>
+
+                        <div class="timeline-content">
+                            <div class="company-header">
+                                <img src="images/drop-technolab.png" alt="Drop Techno Lab" class="company-logo">
+
+                                <div>
+                                    <h3>Jr. PHP Developer</h3>
+                                    <p class="company">
+                                        <strong>Drop Techno Lab Private Limited</strong> • Ahmedabad
+                                    </p>
+                                    <span class="duration">Feb 2024 – Present</span>
+                                </div>
+                            </div>
+
+                            <ul>
+                                <li>Developed backend modules using PHP & MVC</li>
+                                <li>Integrated third-party APIs and CRMs</li>
+                                <li>Implemented authentication and RBAC</li>
+                                <li>Optimized MySQL queries</li>
+                                <li>Handled file uploads, emails & cron jobs</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- Future Experience (Optional) -->
+                    <div class="timeline-item muted">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <div class="company-header">
+                                <img src="images/drop-technolab.png" alt="Drop Techno Lab" class="company-logo">
+
+                                <div>
+                                    <h3>Next Role</h3>
+                                    <p class="company">Backend Engineer • Future</p>
+                                    <span class="duration">Coming Soon</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
+
 
             <!-- <div class="swiper-slide projects">
                 <h1 class="heading">Projects</h1>
