--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
                 </div>
             </div>
-            <div class="swiper-slide gallery experience">
+            <!-- <div class="swiper-slide gallery experience">
                 <h1 class="heading">Work Experience</h1>
 
                 <div class="experience-content">
@@ -193,26 +193,6 @@
                         <li>Used Git for version control and participated in code reviews</li>
                         <li>Worked on multiple client projects with complex business workflows</li>
                     </ul>
-                </div>
-            </div>
-            <!-- <div class="swiper-slide education">
-                <h1 class="heading">Education</h1>
-                <div class="education-wrapper">
-                    <div class="education-card">
-                        <h2>Master of Computer Applications (MCA)</h2>
-                        <p class="institute">
-                            <strong>LJ University</strong> Ahmedabad | India
-                        </p>
-                        <p class="duration">2022 – 2024</p>
-                    </div>
-
-                    <div class="education-card">
-                        <h2>Bachelor of Commerce (Hons.)</h2>
-                        <p class="institute">
-                            <strong>Marwadi University</strong> Rajkot | India
-                        </p>
-                        <p class="duration">2019 – 2022</p>
-                    </div>
                 </div>
             </div> -->
 
@@ -255,14 +235,37 @@
                                 <img src="images/drop-technolab.png" alt="Drop Techno Lab" class="company-logo">
 
                                 <div>
-                                    <h3>Next Role</h3>
-                                    <p class="company">Backend Engineer • Future</p>
-                                    <span class="duration">Coming Soon</span>
+                                    <h3>Intern PHP Developer</h3>
+                                    <p class="company">
+                                        <strong>Drop Techno Lab Private Limited</strong> • Ahmedabad
+                                    </p>
+                                    <span class="duration">Internship</span>
                                 </div>
                             </div>
                         </div>
                     </div>
 
+                </div>
+            </div>
+
+            <div class="swiper-slide education">
+                <h1 class="heading">Education</h1>
+                <div class="education-wrapper">
+                    <div class="education-card">
+                        <h2>Master of Computer Applications (MCA)</h2>
+                        <p class="institute">
+                            <strong>LJ University</strong> Ahmedabad | India
+                        </p>
+                        <p class="duration">2022 – 2024</p>
+                    </div>
+
+                    <div class="education-card">
+                        <h2>Bachelor of Commerce (Hons.)</h2>
+                        <p class="institute">
+                            <strong>Marwadi University</strong> Rajkot | India
+                        </p>
+                        <p class="duration">2019 – 2022</p>
+                    </div>
                 </div>
             </div>
 
